force-app/main/default/objects/Recommendation/fields/ContextId__c.field-meta.xml
<CustomField>
    <fullName>ContextId__c</fullName>
    <label>ContextId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>