force-app/main/default/objects/Recommendation/fields/ContextRecordId__c.field-meta.xml
<CustomField>
    <fullName>ContextRecordId__c</fullName>
    <label>ContextRecordId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>