force-app/main/default/objects/Recommendation/fields/DuplicateText__c.field-meta.xml
<CustomField>
    <fullName>DuplicateText__c</fullName>
    <defaultValue>&quot;false&quot;</defaultValue>
    <label>DuplicateText</label>
    <length>20</length>
    <type>Text</type>
</CustomField>