force-app/main/default/objects/Recommendation/fields/Tactical_Priority__c.field-meta.xml
<CustomField>
    <fullName>Tactical_Priority__c</fullName>
    <label>Tactical Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>